# python-project-50

./: .coverage  .gitignore  Makefile  README.md  coverage.xml  pyproject.toml  setup.cfg  step-eight.cast  step-five.cast  step-seven.cast  step-six.cast  step-three.cast
.github/workflows/: project-check.yml
gendiff/: __init__.py
gendiff/data/: comparison_dict.py  load_file.py  parser.py  search_diff.py
gendiff/formarter/: json.py  plain  plain.py  stylish.py
gendiff/scripts/: formarter_yaml.py  gendiff.py  parser.py  search_diff.py
tests/: test_generate_diff.py
tests/fixtures/: Expected_output_json.txt  Expected_output_json_smol.txt
